--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,7 +10,7 @@
 
 <div class="row">
   <div class="col-md-9">
-    <%= render 'shared/article' %>
+    <%= render @articles.order(created_at: :desc) %>
   </div> <!-- end articles' column -->
 
   <div class="col-md-3 hidden-print hidden-xs hidden-sm">
