--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,17 +12,45 @@
 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-  <%= render 'shared/shim' %>
+  <!--[if lt IE 9]>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
+    </script>
+  <![endif]-->
 </head>
 
 <body>
-	<%= render 'shared/navbar' %>
+  <nav class="navbar navbar-default navbar-fixed-top"> 
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle Navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <%= link_to "TheRocketBlog", root_path, class: "navbar-brand" %>
+      </div> <!-- end navbar-header -->
+
+      <div class="collapse navbar-collapse" id="navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to "about",     about_path %></li>
+          <li><%= link_to "contact",   contact_path %></li>
+          <li><a href="#">login</a></li>
+        </ul>
+      </div> <!-- end regular navbar-nav --> 
+    </div> <!-- end container for navbar -->
+  </nav>
 
   <div class="container">
     <%= yield %>
   </div>
   
-  <%= render 'shared/footer' %>
+  <footer class="footer">
+    <div class="container">
+      <span>Blog template built with <a href="http://getbootstrap.com">Bootstrap</a></span>
+      <ul><li>&copy; RocketMan . 2017</li></ul>
+    </div> <!-- end container -->
+  </footer>
 
   <%= javascript_include_tag 'scripts' %>
 </body>
