--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -21,6 +21,6 @@
   <p class="article-abstract justified"><%= article.abstract %></p>
 
   <div class="article-footer">
-    <%= link_to 'Read More', article, class: "btn btn-primary btn-lg" %>
+    <%= link_to 'Read More', article, class: "btn btn-info btn-lg" %>
   </div>
 </section>
