--- a/app/views/articles/contact.html.erb
+++ b/app/views/articles/contact.html.erb
@@ -1,6 +1,6 @@
-<header class="site-header">
-  <h1 class="site-name">Contact</h1>
-  <p class="site-description">Here is how you can get a hold of the people at The Rocket Blog!</p>
+<header class="main-header">
+  <h1 class="main-name">Contact</h1>
+  <p class="main-description">Here is how you can get a hold of the people at The Rocket Blog!</p>
 </header>
 
 <div class="row">
@@ -48,7 +48,7 @@
 	        <p id="visible-comment_2"></p>
 	      </div>
         <div class="btn-centered">
-          <button type="submit" class="btn btn-primary" id="button">Submit</button>
+          <button type="submit" class="btn btn-info btn-lg" id="button">Submit</button>
         </div>
 	    </form>
     </section>
