--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,16 +3,16 @@
   <div class="alert alert-success" role="alert"><%= notice %></div>
 <% end %>
 
-<header class="site-header">
-  <h1 class="site-name custom-line-hgt"><%= @article.title %></h1>
-  <h2 class="site-author">by <%= @article.author %></h2>
-  <p class="site-description desc-top-margin">
+<header class="main-header">
+  <h1 class="main-name custom-line-hgt"><%= @article.title %></h1>
+  <h2 class="main-author">by <%= @article.author %></h2>
+  <p class="main-description desc-top-margin">
     Posted on <%= @article.created_at.strftime("%B %e, %Y at %l:%M %p (%Z %:z)") %>
     <% if (@article.created_at != @article.updated_at) %>
       <br>Last Updated on <%= @article.updated_at.strftime("%B %e, %Y at %l:%M %p (%Z %:z)") %>
     <% end %>
   </p>
-</header> <!-- end site-header -->
+</header> <!-- end main-header -->
 
 <section class="article-big">
   <% if (@article.image != "") and (@article.image != nil) %>
@@ -24,9 +24,9 @@
   </div>
   <div class="article-footer">
     <div class="btn-group" role="group">
-      <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-success article-button" %>
-      <%= link_to 'Delete', @article, class: "btn btn-success article-button", method: :delete, data: { confirm: 'Are you sure?' } %>
-      <%= link_to 'Back', root_path, class: "btn btn-success article-button" %>
+      <%= link_to 'Edit', edit_article_path(@article) %> | 
+      <%= link_to 'Delete', @article, method: :delete, data: { confirm: 'Are you sure?' } %> | 
+      <%= link_to 'Back', root_path %>
     </div>
   </div>
 </section>
