--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -37,6 +37,6 @@
   </div>
 
   <div class="actions btn-centered">
-    <%= f.submit class: "btn btn-primary" %>
+    <%= f.submit class: "btn btn-info btn-lg" %>
   </div>
 <% end %>
