--- a/app/views/articles/about.html.erb
+++ b/app/views/articles/about.html.erb
@@ -1,6 +1,6 @@
-<header class="site-header">
-  <h1 class="site-name">About</h1>
-  <p class="site-description">The Rocket Blog... What exactly is this all about?</p>
+<header class="main-header">
+  <h1 class="main-name">About</h1>
+  <p class="main-description">The Rocket Blog... What exactly is this all about?</p>
 </header>
 
 <section class="no-side-padding about-text justified">
