--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,12 +1,7 @@
-<% if notice != nil %>
-  <br>
-  <div class="alert alert-success" role="alert"><%= notice %></div>
-<% end %>
-
-<header class="site-header">
-  <h1 class="site-name">The Rocket Blog</h1>
-  <p class="site-description">A blog for... just about everything that comes to mind!</p>
-</header> <!-- end site-header -->
+<header class="main-header">
+  <h1 class="main-name">The Rocket Blog</h1>
+  <p class="main-description">A blog for... just about everything that comes to mind!</p>
+</header> <!-- end main-header -->
 
 <div class="row">
   <div class="col-md-9">
@@ -20,17 +15,17 @@
         <h4 class="featured-title"><%= @featured.title %></h4>
         <p class="featured-abstract justified"><%= @featured.abstract %></p>
         <div class="sidebox-footer">
-          <%= link_to 'Read More', @featured, class: "btn btn-primary" %>
+          <%= link_to 'Read More', @featured, class: "btn btn-info btn-lg btn-block" %>
         </div>
       </section>
 
       <section class="sidebox">
         <h3 class="featured-section-title">A Few Options...</h3>
         <div class="sidebox-footer">
-          <div class="btn-group-vertical" role="group">
-            <%= link_to 'New Article', new_article_path, class: "btn btn-success" %>
-            <%= link_to "Back To Top", '#', class: "btn btn-success" %>
-          </div>
+          <ul class="options-list">
+            <li><%= link_to 'New Article', new_article_path %></li>
+            <li><%= link_to "Back To Top", '#' %></li>
+          </ul>
         </div>
       </section>
     </aside>
