--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -3,7 +3,7 @@
   <p class="main-description">The Rocket Blog... What exactly is this all about?</p>
 </header>
 
-<section class="no-side-padding about-text justified">
+<section class="about-text justified">
 	<p>Well, this blog originally started off as part of one of my Achievement exercises for my <span class="bold">CareerFoundry Web Development</span> course.</p>
 
 	<p>However, as the project took shape, I decided that I could turn this blog into a <span class="bold">space</span> in which people can post about anything that could be of use to anyone.</p>
