--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -47,7 +47,7 @@
 	        <p class="bold" id="visible-comment_1"></p>
 	        <p id="visible-comment_2"></p>
 	      </div>
-        <div class="btn-centered">
+        <div class="center-content">
           <button type="submit" class="btn btn-info btn-lg" id="button">Submit</button>
         </div>
 	    </form>
