--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -27,10 +27,14 @@ body {
 	padding-top: $header-footer-height;
 }
 
+/* overwriting the bootstrap colour for the anchors */
 a, a:focus, a:hover { color: $aqua-color; }
 
 /* set the position at which the sidebar starts to move down */
 .affix { top: $header-footer-height; }
+
+/* adding a bit of top margin to the alert messages */
+.alert { margin-top: 20px; }
 
 /* style the main header section */
 .main-header {
@@ -71,9 +75,7 @@ a, a:focus, a:hover { color: $aqua-color; }
     font-weight: 300;
   }
 
-  .desc-top-margin {
-    margin-top: 10px;
-  }
+  .desc-top-margin { margin-top: 10px; }
 }
 
 /* style the images */
@@ -86,8 +88,6 @@ a, a:focus, a:hover { color: $aqua-color; }
 /* justifies text */
 .justified { text-align: justify; }
 
-/* set a fixed width to all buttons */
-//.btn { width: 130px; }
 
 /* create a top margin gap of 30 pixels */
 .top-margin { margin-top: 30px; }
@@ -106,15 +106,84 @@ a, a:focus, a:hover { color: $aqua-color; }
 	max-width: 330px;
 }
 
+/* used mainly to center buttons and texts */
 .center-content { text-align: center; }
 
-/*
-Firefox has some awkward fieldset styling involving width that interferes with the 
-responsive table. This cannot be overridden without a Firefox-specific hack that it is 
-not provided in Bootstrap.
-*/
-@-moz-document url-prefix() {
-  fieldset { display: table-cell; }
+/* a simple container featuring top and bottom margins used for several tags */
+.generic-container { 
+	margin-top: 20px;
+	margin-bottom: 20px; 
+}
+
+/* the bottom-most options for most pages */
+.bottom-options {
+	margin-bottom: 20px;
+	padding-top: 20px;
+
+	text-align: center;
+
+	border-top: 1px solid $grey-border;
+}
+
+/* Used for password labels and 'remember me' checkboxes */
+.double-content {
+	margin-bottom: 5px;
+
+	.inline-label { display: inline; }
+
+	.custom-label {
+		margin-left: 5px;
+		
+		font-weight: normal;
+	}
+}
+
+/* textareas are not resizeable */
+.no-resize { resize: none; }
+
+/* pagination */
+.pagination {
+	margin-top: 0;
+	margin-bottom: 0;
+
+	>em, >span, >a {
+    position: relative;
+    float: left;
+    margin-left: -1px;
+    padding: 6px 12px;
+    line-height: 1.42857143;
+    text-decoration: none;
+    border: 1px solid #ddd;
+  }
+
+  >a {
+	  &:focus, &:hover {
+		  z-index: 2;
+		  background-color: #eee;
+		  border-color: #ddd;  	
+		}
+  }
+
+  .previous_page { 
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+  }
+
+  .next_page { 
+  	border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+  }
+
+  .disabled {
+  	color: $grey-font;
+  	cursor: not-allowed;
+  }
+
+  .current { 
+  	color: #fff;
+  	background-color: $aqua-color;
+  	cursor: not-allowed;
+   }
 }
 
 /******************/
@@ -149,34 +218,14 @@ not provided in Bootstrap.
 	}
 }
 
-
 /* overwriting some of bootstrap's values */
 .navbar-right { margin-right: 0; }
-
-/****************/
-/* sign_up page */
-/****************/
-
-.double-content {
-	margin-bottom: 5px;
-
-	.inline-label { display: inline; }
-
-	.custom-label {
-		margin-left: 5px;
-		
-		font-weight: normal;
-	}
-}
 
 /*******************/
 /* index/home page */
 /*******************/
 
-@media (min-width: 992px) {
-	.sidebox { width: 212.5px; }
-}
-
+/* change the width of sidebar boxes when width is greater than 1200 pixels */
 @media (min-width: 1200px) {
 	.sidebox { width: 262.5px; }
 }
@@ -235,28 +284,21 @@ aside {
 		font-size: 1.5em;
 	}
 
-	.featured-abstract {
-		line-height: 1.3;
-	}
-
-	h3 { text-align: center; }
+	.featured-abstract { line-height: 1.3; }
 
 	.options-list {
 		margin-bottom: 0;
 		padding: 0;
 		list-style-type: none;
 	}
-
-	.sidebox-footer {
-		text-align: center;
-	}
 }
+
+/* style used for a couple of tags needing a minor margin gap */
+.margin-bottom-gap { margin-bottom: 20px; }
 
 /*********************/
 /* about and contact */
 /*********************/
-
-.no-side-padding { padding: 0; }
 
 /* style for the about and contact texts in their respective pages */
 .about-text, .contact-text {
@@ -279,6 +321,7 @@ aside {
 	}
 }
 
+/* style for the form in the contact section */
 .form-custom-margin { 
 	margin-top: 30px; 
 	margin-bottom: 20px;
@@ -294,40 +337,7 @@ aside {
 	margin-bottom: 20px;
 
 	.article-text { margin: 20px 0; }
-	
-	.article-footer { 
-		padding-top: 20px;
-
-		text-align: center;
-
-		border-top: 1px solid $grey-border;
-	}
 }
-
-/********************/
-/* edit/new article */
-/********************/
-
-/* style the div containing the bottom menu buttons */
-.edit-footer, .new-footer {
-		padding-top: 20px;
-
-		text-align: center;
-
-		border-top: 1px solid $grey-border;
-}
-
-/* center the forms' blue buttons */
-.btn-centered { text-align: center; }
-
-/* overwrite custom margin for form blue buttons */
-.actions {
-	margin-top: 15px;
-	margin-bottom: 20px;
-}
-
-/* textareas are not resizeable */
-.no-resize { resize: none; }
 
 /**************/
 /* footer bar */
