--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -36,7 +36,7 @@
     <%= f.text_area :text, class: "form-control no-resize", rows: "8" %>
   </div>
 
-  <div class="actions btn-centered">
+  <div class="center-content">
     <%= f.submit class: "btn btn-info btn-lg" %>
   </div>
 <% end %>
