--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -2,10 +2,10 @@
   <h1 class="main-name">New Article</h1>
 </header> <!-- end page-header -->
 
-<section class="form-custom-margin form-text">
+<section class="generic-container form-text">
 	<%= render 'form', article: @article %>
-
-	<div class="new-footer">
-	  <%= link_to 'Back', root_path %>
-	</div>
 </section>
+
+<div class="bottom-options">
+  <%= link_to 'Back to Home', root_path %>
+</div>
