--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,8 @@
 <% if notice != nil %>
-  <br>
-  <div class="alert alert-success" role="alert"><%= notice %></div>
+  <div class="alert alert-info" role="alert"><%= notice %></div>
+<% end %>
+<% if alert != nil %>
+  <div class="alert alert-danger" role="alert"><%= alert %></div>
 <% end %>
 
 <header class="main-header">
@@ -22,11 +24,15 @@
   <div class="article-text">
     <%= render html: @article.text.html_safe %>
   </div>
-  <div class="article-footer">
-    <div class="btn-group" role="group">
-      <%= link_to 'Edit', edit_article_path(@article) %> | 
-      <%= link_to 'Delete', @article, method: :delete, data: { confirm: 'Are you sure?' } %> | 
-      <%= link_to 'Back', root_path %>
-    </div>
-  </div>
 </section>
+
+<%= render 'new_comment' %>
+<%= render 'comments' %>
+
+<div class="bottom-options">
+  <% if user_signed_in? && current_user.admin %>
+    <%= link_to 'Edit Article', edit_article_path(@article) %> | 
+    <%= link_to 'Delete Article', @article, method: :delete, data: { confirm: 'Are you sure?' } %> | 
+  <% end %>
+  <%= link_to 'Back to Home', root_path %>
+</div>
