--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -3,27 +3,20 @@
     <h1 class="main-name smaller">Forgot Your Password?</h1>
   </header> <!-- end main-header -->
 
-  <br>
+  <section class="generic-container">
+		<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+		  <%= devise_error_messages! %>
 
-	<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-	  <%= devise_error_messages! %>
+		  <div class="field form-group">
+		    <%= f.label :email, "E-Mail Password" %>
+		    <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "ex: name@domain.com" %>
+		  </div>
 
-	  <div class="field form-group">
-	    <%= f.label :email, "E-Mail Password" %>
-	    <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "ex: name@domain.com" %>
-	  </div>
+		  <%= f.submit "Send Reset Password Instructions", class: "btn btn-lg btn-block btn-info" %> 
+		<% end %>
+	</section>
 
-	  <div class="actions">
-	    <%= f.submit "Send Reset Password Instructions", class: "btn btn-lg btn-block btn-info" %> 
-	  </div>
-	<% end %>
-
-  <hr>
-
-  <div class="center-content">
+  <div class="bottom-options">
     <%= render "devise/shared/links" %>
   </div>
-
 </div>
-
-<br>
