--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,42 +3,35 @@
     <h1 class="main-name">Sign Up</h1>
   </header> <!-- end main-header -->
 
-  <br>
+  <section class="generic-container">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= devise_error_messages! %>
-
-    <div class="field form-group">
-      <%= f.label :email, "E-Mail Address" %>
-      <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "ex: name@domain.com" %>
-    </div>
-
-    <div class="field form-group">
-      <div class="double-content">
-        <%= f.label :password, class: "inline-label" %>
-        <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %>
+      <div class="field form-group">
+        <%= f.label :email, "E-Mail Address" %>
+        <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "ex: name@domain.com" %>
       </div>
-      <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
-    </div>
 
-    <div class="field form-group">
-      <%= f.label :password_confirmation, "Re-Confirm Password" %>
-      <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
-    </div>
+      <div class="field form-group">
+        <div class="double-content">
+          <%= f.label :password, class: "inline-label" %>
+          <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %>
+        </div>
+        <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+      </div>
 
-    <div class="actions">
+      <div class="field form-group">
+        <%= f.label :password_confirmation, "Re-Confirm Password" %>
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
+      </div>
+
       <%= f.submit "Sign Up", class: "btn btn-lg btn-block btn-info" %> 
-    </div>
-  <% end %>
-
-  <hr>
+    <% end %>
+  </section>
   
-  <div class="center-content">
+  <div class="bottom-options">
     <%= render "devise/shared/links" %>
   </div>
-
 </div>
-
-<br>
