--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,15 +3,14 @@
 	  <h1 class="main-name">Edit User</h1>
 	</header> <!-- end main-header -->
 
-	<br>
+	<section class="generic-container">
+		<%= render 'form', user: @user %>
+	</section>
 
-	<%= render 'form', user: @user %>
-
-	<hr>
-
-	<div class="center-content">
-	  <%= link_to 'Show', @user %> | <%= link_to 'Back', users_path %>
+	<div class="bottom-options">
+	  <%= link_to 'Back to Profile', @user %>
+	  <% if user_signed_in? && current_user.admin %>
+	   | <%= link_to 'Back to Users\' List', users_path %>
+	  <% end %>
 	</div>
 </div>
-
-<br>
