--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,5 @@
 <% if notice != nil %>
-  <br>
-  <div class="alert alert-info" id="notice" role="alert"><%= notice %></div>
+  <div class="alert alert-info" role="alert"><%= notice %></div>
 <% end %>
 
 <div class="mini-container">
@@ -8,31 +7,31 @@
 	  <h1 class="main-name smaller">User Profile</h1>
 	</header> <!-- end main-header -->
 
-	<br>
-
-	<div class="panel panel-info">
-		<div class="panel-heading">
-			<h3 class="panel-title">First Name</h3>
+	<section class="generic-container">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h3 class="panel-title">First Name</h3>
+			</div>
+			<div class="panel-body">
+				<%= @user.first_name %>
+			</div>
 		</div>
-		<div class="panel-body">
-			<%= @user.first_name %>
-		</div>
-	</div>
 
-	<div class="panel panel-info">
-		<div class="panel-heading">
-			<h3 class="panel-title">Last Name</h3>
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h3 class="panel-title">Last Name</h3>
+			</div>
+			<div class="panel-body">
+				<%= @user.last_name %>
+			</div>
 		</div>
-		<div class="panel-body">
-			<%= @user.last_name %>
-		</div>
-	</div>
+	</section>
 
-	<hr>
-
-	<div class="center-content">
-		<%= link_to 'Edit', edit_user_path(@user) %> | <%= link_to 'Back', users_path %>
+	<div class="bottom-options">
+		<%= link_to 'Edit Profile', edit_user_path(@user) %>
+		<% if user_signed_in? && current_user.admin %>
+	   | <%= link_to 'Back to Users\' List', users_path %>
+	  <% end %>
+		 | <%= link_to 'Back to Home', root_path %>
 	</div>
 </div>
-
-<br>
